# shazam-set-script

./: .gitignore  README.md  pyproject.toml
shazam_set_script/: detect.py  shazam.py
