[tool.poetry]
name = "shazam-set-script"
version = "0.1.0"
description = ""
authors = ["Daniel Malik <daniel.malik@mhsp.solutions>"]

[tool.poetry.dependencies]
python = "^3.10"
shazamio = "^0.2.0"
click = "^8.1.3"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
